[package]
name = "rpg_farm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version="*", features = ["rwh_05"] }
env_logger = "*"
log = "*"
wgpu = { version = "*" }
tokio = { version = "*", features = ["full"] }
bytemuck = { version = "*", features = ["derive"] }
image = { version = "*", features = ["png", "jpeg"] }
cgmath = "*"